# fcgi_auth

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
src/: fcgi_auth.c
test/: authtest.sh  cookies.txt  lighttpd.conf
